--- a/src/app/components/welcome/welcome.component.html
+++ b/src/app/components/welcome/welcome.component.html
@@ -15,7 +15,7 @@
       <button
         type="button"
         (click)="login()"
-        class="btn btn-primary btn-lg px-4 gap-3"
+        class="bg-purplex11 p-2 rounded-md"
       >
         Login
       </button>
