--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
-<div *ngIf="idToken">
+
+@if (idToken) {
+<div>
   <div style="text-align: center">
     <h1>Welcome</h1>
   </div>
@@ -16,3 +18,4 @@
     <button (click)="refresh()">Refresh</button>
   </p>
 </div>
+}
