theme config WIP

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,4 +18,8 @@
     <button (click)="refresh()">Refresh</button>
   </p>
 </div>
+<h3>h3 heading</h3>
+<h4>h4 heading</h4>
 }
+
+<button (click)="login()">Login</button>
