--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<header class="w-full h-8 bg-indigodye flex justify-between items-center ">
+<header class="w-full h-8 bg-indigo flex justify-between items-center ">
   <div class="container  px-2">
     <h3 class="text-white font-medium">OAuth2 using Auth0, Authorization Code Flow with PKCE and angular-oauth2-oidc</h3>
   </div>
