login fixed, ui cleaned, jost applied correctly to implented buttons

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,22 +1,26 @@
-<header class="w-full h-8 bg-indigo flex justify-between items-center ">
-  <div class="container  px-2">
-    <h3 class="text-white font-medium">OAuth2 using Auth0, Authorization Code Flow with PKCE and angular-oauth2-oidc</h3>
-  </div>
-
-  <div>
-    <button mat-flat-button (click)="login()" >
-      Login
-    </button>
-  </div>
-
-    <div>
-      <button mat-flat-button (click)="logout()" >
+<header class="p-1.5">
+  <div class="bg-[#373F68] rounded-lg flex items-center justify-between h-7.2">
+    <div class="flex items-center space-x-4 p-2.4 h-2.6">
+      <span class="text-white font-bold text-1.8">6 Suggestions</span>
+    </div>
+    <div class="pr-1.6 py-1.4 flex space-x-1">
+      @if (!idToken) {
+      <button class="flex-1" mat-flat-button (click)="login()">
+        Login
+      </button>
+      }
+      @if (idToken) {
+      <button class="flex-1" mat-flat-button (click)="logout()">
         Logout
       </button>
+      <button class="flex-2" mat-flat-button>
+        + Add Feedback
+      </button>
+      }
     </div>
-
+  </div>
 </header>
-<body style="background-color: bisque">
+<body >
 <router-outlet />
 </body>
 
