--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,35 +1,11 @@
+
+@use "app/styles/main";
 @import url("https://fonts.googleapis.com/css2?family=Jost:wght@400;700&display=swap");
 
 /* You can add global styles to this file, and also import other style files */
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
 
 html {
-  font-size: 65%;
-}
-
-h1,
-h2,
-h3,
-h4 {
-  @apply text-headingColor;
-}
-
-h1 {
-  @apply font-sans font-bold text-h1 leading-[3.365rem] tracking-[-0.033rem];
-}
-
-h2 {
-  @apply font-sans font-bold text-h2 leading-[2.788rem] tracking-[-0.025rem];
-}
-
-h3 {
-  @apply font-sans font-bold text-h3 leading-[2.5rem] tracking-[-0.025rem];
-}
-
-h4 {
-  @apply font-sans font-bold text-h4 leading-[1.923rem] tracking-[-0.02rem];
+  font-size: 62.5%;
 }
 
 body {
@@ -40,114 +16,3 @@ body,
 p {
   @apply text-textColor;
 }
-
-
-:root {
-  --mat-form-field-error-text-color: theme('colors.ErrorColor');
-}
-
-//
-//  }
-/* Change the border color */
-.mdc-text-field--outlined:not(.mdc-text-field--disabled) .mdc-notched-outline__leading,
-.mdc-text-field--outlined:not(.mdc-text-field--disabled) .mdc-notched-outline__notch,
-.mdc-text-field--outlined:not(.mdc-text-field--disabled) .mdc-notched-outline__trailing {
-  border-color: var(--border-color) !important;
-}
-
-/* Change the border width */
-.mdc-text-field--outlined:not(.mdc-text-field--disabled) .mdc-notched-outline .mdc-notched-outline__leading,
-.mdc-text-field--outlined:not(.mdc-text-field--disabled) .mdc-notched-outline .mdc-notched-outline__notch,
-.mdc-text-field--outlined:not(.mdc-text-field--disabled) .mdc-notched-outline .mdc-notched-outline__trailing {
-  border-width: 1.5px !important;
-}
-
-/* Change the border focused color */
-.mdc-text-field--outlined:not(.mdc-text-field--disabled).mdc-text-field--focused .mdc-notched-outline__leading,
-.mdc-text-field--outlined:not(.mdc-text-field--disabled).mdc-text-field--focused .mdc-notched-outline__notch,
-.mdc-text-field--outlined:not(.mdc-text-field--disabled).mdc-text-field--focused .mdc-notched-outline__trailing {
-  border-color: var(--color-primary) !important;
-}
-
-/* Change the border focused color */
-.mdc-text-field--outlined:not(.mdc-text-field--disabled).mdc-text-field--invalid .mdc-notched-outline__leading,
-.mdc-text-field--outlined:not(.mdc-text-field--disabled).mdc-text-field--invalid .mdc-notched-outline__notch,
-.mdc-text-field--outlined:not(.mdc-text-field--disabled).mdc-text-field--invalid .mdc-notched-outline__trailing {
-  border-color: var(--mat-form-field-error-text-color) !important;
-}
-.mdc-text-field--outlined:not(.mdc-text-field--disabled) {
-  &,
-  &.mdc-text-field--invalid,
-  &.mdc-text-field--focused {
-    .mdc-notched-outline__notch {
-      border-right: 0 !important;
-    }
-  }
-}
-
-
-/* Change the border hover color */
-.mdc-text-field--outlined:not(.mdc-text-field--disabled):not(.mdc-text-field--focused):hover .mdc-notched-outline .mdc-notched-outline__leading,
-.mdc-text-field--outlined:not(.mdc-text-field--disabled):not(.mdc-text-field--focused):hover .mdc-notched-outline .mdc-notched-outline__notch,
-.mdc-text-field--outlined:not(.mdc-text-field--disabled):not(.mdc-text-field--focused):hover .mdc-notched-outline .mdc-notched-outline__trailing {
-  border-color: var(--color-primary) !important;
-}
-.mdc-text-field--outlined {
-
-
-  .mat-mdc-form-field-flex {
-    /* Common customizations for both labeled and non-labeled fields */
-
-    .mdc-notched-outline {
-      height: 45px;
-      padding-top: 10px;
-
-    }
-
-    .mdc-notched-outline--no-label {
-      height: 45px;
-      padding-top: 10px;
-    }
-
-
-    .mdc-notched-outline__notch {
-      border-right-width: 0 !important;
-
-      .mdc-floating-label {
-        cursor: inherit;
-        top: 27px;
-      }
-    }
-  }
-}
-/* Customizing the input text color */
-//.mat-mdc-form-field-flex .mat-mdc-form-field-infix .mdc-text-field__input {
-//  color: red;
-//
-//}
-
-/* Focused state customization */
-//.mdc-text-field--focused {
-//  .mdc-notched-outline__leading {
-//    border-color: #5bdcc6 !important;
-//  }
-//
-//  .mdc-notched-outline__notch {
-//    border-color: #5bdcc6 !important;
-//  }
-//
-//  .mdc-notched-outline__trailing {
-//    border-color: #5bdcc6 !important;
-//  }
-//
-//
-//}
-
-//
-//:focus-within .mdc-notched-outline,
-//:focus-within .mdc-notched-outline__leading,
-//:focus-within .mdc-notched-outline__trailing {
-//  border-color: #5bdcc6 !important;
-//  border-width: 1px !important;
-//}
-//}
