--- a/src/app/components/welcome/welcome.component.html
+++ b/src/app/components/welcome/welcome.component.html
@@ -1,5 +1,6 @@
+
 @if (idToken) {
-  <div>
+  <div class="bg-amber-50 p-1.5 m-1.5">
     <div style="text-align: center">
       <h1>Welcome</h1>
     </div>
@@ -17,34 +18,6 @@
       <button (click)="refresh()">Refresh</button>
     </p>
   </div>
-
 }
-<div class="bg-blueRibbon w-8 ">
 
-  .
-</div>
-<div class="bg-[#373F68] rounded-lg flex items-center justify-between h-7.2">
-  <div class="flex items-center space-x-4 p-2.4">
-    <svg class="w-5 h-5 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9.663 17h4.673M12 3v1m6.364 1.636l-.707.707M21 12h-1M4 12H3m3.343-5.657l-.707-.707m2.828 9.9a5 5 0 117.072 0l-.548.547A3.374 3.374 0 0014 18.469V19a2 2 0 11-4 0v-.531c0-.895-.356-1.754-.988-2.386l-.548-.547z"></path>
-    </svg>
-    <span class="text-white font-bold">6 Suggestions</span>
-    <div class="flex items-center space-x-2 text-white">
-      <span>Sort by:</span>
-      <button class="font-bold flex items-center">
-        Most Upvotes
-        <svg class="w-4 h-4 ml-1" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path>
-        </svg>
-      </button>
-    </div>
-  </div>
-  <div class="pr-1.6 py-1.4 flex space-x-1">
-    <button class="flex-1" mat-flat-button (click)="login()">
-      Login
-    </button>
-  <button class="flex-2" mat-flat-button>
-    + Add Feedback
-  </button>
-  </div>
-</div>
+
