--- a/src/app/styles/material/material.scss
+++ b/src/app/styles/material/material.scss
@@ -1,5 +1,6 @@
-@use "overrides/buttons";
-@use "overrides/_input";
+// material/material.scss
+@forward "overrides/buttons";
+@forward "overrides/_input";
 :root {
   --mat-form-field-error-text-color: theme('colors.ErrorColor');
 }
