--- a/src/app/styles/material/overrides/_buttons.scss
+++ b/src/app/styles/material/overrides/_buttons.scss
@@ -3,7 +3,12 @@
   // Angular Material button variables
   --mdc-protected-button-container-shape: 0.625rem;
   --mdc-typography-button-font-family: 'Jost' !important;
-  --mdc-typography-button-font-size: 1.4rem !important;
+  --mdc-typography-button-font-size: 1.8rem !important;
+
+  --mdc-filled-button-label-text-font: 'Jost' !important;
+  --mdc-filled-button-label-text-size: 1.4rem !important;
+  --mdc-filled-button-label-text-weight: 700;
+
 
   --mdc-typography-button-font-weight: 700;
   --mdc-typography-button-letter-spacing: 0;
@@ -19,6 +24,4 @@
   --mdc-filled-button-label-text-color: theme('colors.white');
   --mdc-outlined-button-outline-color: theme('colors.blueRibbon');
   --mdc-outlined-button-label-text-color: theme('colors.blueRibbon');
-
-  --mat-form-field-error-text-color: theme('colors.ErrorColor');
 }
